    * 0558 FIX: availability: fixed exception on specific filter settings...
    * 0712 FIX: Fix multiple groups with same tag when grouping hosts after a tag...

    WATO:
    * 0559 FIX: WATO snapshots: improved validation of (uploaded) snapshots...
    * 0709 FIX: Fix NoneType has not attribute userdb_automatic_sync bug in D-WATO

    BI:
    * 0669 FIX: Fixed regex matching in BI when using character groups [...]...

    Event Console:
    * 0672 FIX: Service item of "Check event state in event console" checks can now be configured...


1.2.4:
    Core & Setup:
    * 0682 FIX: Allow overriding of active and custom checks by more specific rule...
    * 0267 FIX: Fixed auth.serials permission problem in check_mk standalone installation...

    Checks & Agents:
    * 0694 wut_webtherm: Support new versions of WUT-Thermometer...
    * 0688 FIX: winperf_msx_queues: Support output of Exchange 2013...
    * 0689 FIX: postgres_sessions: fix empty agent section in case of 0 sessions...
    * 0692 FIX: fileinfo: Avoid duplicate entries in Solaris agent...
    * 0693 FIX: hpux_lvm: avoid problem when alternative vgdisplay is installed...

    Multisite:
    * 0270 FIX: Multisite host tag filter: Now uses exact match...
    * 0273 FIX: Fixed exceptions when modifying / cloning views...
    * 0274 FIX: Fixed exception when view title or description was missing

    WATO:
    * 0686 FIX: Fix replication with WATO if EC is enabled on master and disabled on slave
    * 0129 FIX: Fixed permission bug in "Edit user profile" dialog....
    * 0269 FIX: brocade_fcport: fixed problem on displaying check_parameters in WATO...
    * 0271 FIX: Fixed sorting in duallist element (two lists with interchangable elements)...
    * 0131 FIX: Error rates for network interfaces can now be set smaller then 0.1 when using Wato....
    * 0690 FIX: Fix language jumping to German when saving user profiles
    * 0666 FIX: Minimum port for the mknotifyd is now 1024 (never use well known ports)...
